# trendrader_with_llm

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  pyproject.toml
.github/workflows/: crawler.yml
config/: config.yaml.example  frequency_words.txt
src/: __init__.py  main.py  reporter.py
src/agents/: __init__.py  news_crew.py
src/crawlers/: __init__.py  aggregator.py  base.py  platforms.py
src/notifiers/: __init__.py  base.py  manager.py  platforms.py
src/utils/: __init__.py  config.py  keyword_filter.py
src/web/: __init__.py  app.py
src/web/templates/: dashboard.html
templates/: report.html
